# just-prompt

./: .gitignore  CLAUDE.md  pyproject.toml
src/just_prompt/: __main__.py  server.py
src/just_prompt/atoms/llm_providers/: anthropic.py  deepseek.py  gemini.py  groq.py  ollama.py  openai.py
src/just_prompt/atoms/shared/: data_types.py  model_router.py  utils.py  validator.py
src/just_prompt/molecules/: ceo_and_board_prompt.py  list_models.py  list_providers.py  prompt.py  prompt_from_file.py
src/just_prompt/tests/atoms/llm_providers/: test_anthropic.py  test_deepseek.py  test_gemini.py  test_ollama.py  test_openai.py
src/just_prompt/tests/atoms/shared/: test_model_router.py  test_utils.py  test_validator.py
src/just_prompt/tests/molecules/: test_ceo_and_board_prompt.py  test_list_models.py  test_list_providers.py  test_prompt.py  test_prompt_from_file.py  test_prompt_from_file_to_file.py
